fix: css replaced fill-available with stretch
! autoprefixer: Replace fill-available to stretch, because spec had been changed

--- a/app/webpack/css/components/common.scss
+++ b/app/webpack/css/components/common.scss
@@ -278,7 +278,9 @@ html {
       // fixed dynamic field
       & > .chip {
          margin-top: 0.7rem;
-         width: -webkit-fill-available;
+         width: -webkit-stretch;
+         width: -moz-available;
+         width: stretch;
       }
 
       .invalid + label.active:after {
